--- a/src/index.html
+++ b/src/index.html
@@ -1,95 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-  maximum-scale=5"
-    />
 
-    <link rel="icon" href="devchallenges.png" />
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://devchallenges.io/"
-    />
+  <link rel="icon" href="./assets/devchallenges.png" />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
+  <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/" />
 
-    <title>Devchallenges</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="./styles.css">
+  <title>Devchallenges</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+</head>
 
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-
-      ul {
-        padding-left: 24px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
-
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
-        </p>
+<body>
+  <main class="welcome">
+    <div class="first-text">
+      <h1>
+        The creative crew
+      </h1>
+      <h2>
+        WHO WE ARE
+      </h2>
+      <p>
+        We are team of creatively diverse, driven, innovative individuals working in various locations from the world.
+      </p>
+    </div>
+      <div class="container">
+        <div class="row row-cols-3">
+          <div class="col-4 text-center">
+            <img src="./assets/photo1.png" alt="photo1" />
+          </div>
+          <div class="col-4 text-center">
+            <img src="./assets/photo2.png" alt="photo2" />
+          </div>
+          <div class="col-4 text-center">
+            <img src="./assets/photo3.png" alt="photo3" />
+          </div>
+          <div class="col-4 text-center">
+            <img src="./assets/photo4.png" alt="photo4" />
+          </div>
+          <div class="col-4 text-center">
+            <img src="./assets/photo5.png" alt="photo5" />
+          </div>
+          <div class="col-4 text-center">
+            <img src="./assets/photo6.png" alt="photo6" />
+          </div>
+        </div>
       </div>
 
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
-    </div>
-  </body>
+
+
+
+
+
+ 
+    <footer class="footer">©2023 Created by <a href="https://github.com/Juana-89/my-team-page-master">Juana Llanje
+        Chávez</a>❤️</footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"></script>
+</body>
+
 </html>
