--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,15 @@
 
 <body>
   <main class="welcome">
-    <div class="first-text">
+    <div class="row mt-8 max-w-sm">
+      <div class="col-lg-6">
+        <div class="float-end">
       <h1>
         The creative crew
       </h1>
+    </div>
+  </div>
+    <div class="col-lg-6">
       <h2>
         WHO WE ARE
       </h2>
@@ -29,36 +34,41 @@
         We are team of creatively diverse, driven, innovative individuals working in various locations from the world.
       </p>
     </div>
-      <div class="container">
-        <div class="row row-cols-3">
-          <div class="col-4 text-center">
-            <img src="./assets/photo1.png" alt="photo1" />
-          </div>
-          <div class="col-4 text-center">
-            <img src="./assets/photo2.png" alt="photo2" />
-          </div>
-          <div class="col-4 text-center">
-            <img src="./assets/photo3.png" alt="photo3" />
-          </div>
-          <div class="col-4 text-center">
-            <img src="./assets/photo4.png" alt="photo4" />
-          </div>
-          <div class="col-4 text-center">
-            <img src="./assets/photo5.png" alt="photo5" />
-          </div>
-          <div class="col-4 text-center">
-            <img src="./assets/photo6.png" alt="photo6" />
-          </div>
+    </div>
+    <div class="container">
+      <div class="row row-cols-3">
+        <div class="col-4 text-center">
+          <img src="./assets/photo1.png" alt="photo1" />
+          <p class="container__title">Product Owner</p>
+          <p class="container__p">Bill Mahoney</p>
+        </div>
+        <div class="col-4 text-center align-self-center">
+          <img src="./assets/photo2.png" alt="photo2" />
+          <p class="container__title">Art Director</p>
+          <p class="container__p">Saba Cabrera</p>
+        </div>
+        <div class="col-4 text-center">
+          <img src="./assets/photo3.png" alt="photo3" />
+          <p class="container__title">Teach Lead</p>
+          <p class="container__p">Shae Lee</p>
+        </div>
+        <div class="col-4 text-center">
+          <img src="./assets/photo4.png" alt="photo4" />
+          <p class="container__title">UX Designer</p>
+          <p class="container__p">Skylah Lu</p>
+        </div>
+        <div class="col-4 text-center align-self-center">
+          <img src="./assets/photo5.png" alt="photo5" />
+          <p class="container__title">Developer</p>
+          <p class="container__p">Griff Richards</p>
+        </div>
+        <div class="col-4 text-center">
+          <img src="./assets/photo6.png" alt="photo6" />
+          <p class="container__title">Developer</p>
+          <p class="container__p">Stan John</p>
         </div>
       </div>
-
-
-
-
-
-
- 
-    <footer class="footer">©2023 Created by <a href="https://github.com/Juana-89/my-team-page-master">Juana Llanje
+    </div>   <footer class="footer">©2023 Created by <a href="https://github.com/Juana-89/my-team-page-master">Juana Llanje
         Chávez</a>❤️</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
