--- a/src/index.html
+++ b/src/index.html
@@ -17,24 +17,26 @@
 </head>
 
 <body>
-  <main class="welcome">
-    <div class="row mt-8 max-w-sm">
-      <div class="col-lg-6">
-        <div class="float-end">
-      <h1>
-        The creative crew
-      </h1>
-    </div>
+  <nav class="navbar d-flex flex-row mt-8 justify-content-center align-items-center gap-5">
+    <div class="col-lg-4 text-center">
+      <div class="">
+    <h1>
+      <strong>The creative crew</strong>
+    </h1>
   </div>
-    <div class="col-lg-6">
-      <h2>
-        WHO WE ARE
-      </h2>
-      <p>
-        We are team of creatively diverse, driven, innovative individuals working in various locations from the world.
-      </p>
-    </div>
-    </div>
+</div>
+  <div class="col-lg-4 text-left">
+    <h2>
+      WHO WE ARE
+    </h2>
+    <p class="mb-0">
+      We are team of creatively diverse, driven, innovative individuals working in various locations from the world.
+    </p>
+  </div>
+  </nav>
+  
+  <main class="welcome">
+
     <div class="container">
       <div class="row row-cols-3">
         <div class="col-4 text-center">
