--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
 </head>
 
 <body>
-  <nav class="navbar d-flex flex-row mt-8 justify-content-center align-items-center gap-5">
+  <nav class="navbar d-flex flex-row mt-4 justify-content-lg-center justify-content-sm-start align-items-center">
     <div class="col-lg-4 text-center">
-      <div class="">
-    <h1>
+      <div >
+    <h1 class="text-center text-sm-start">
       <strong>The creative crew</strong>
     </h1>
   </div>
