vista desktop lista

--- a/src/index.html
+++ b/src/index.html
@@ -19,58 +19,76 @@
 <body>
   <nav class="navbar d-flex flex-row mt-4 justify-content-lg-center justify-content-sm-start align-items-center">
     <div class="col-lg-4 text-center">
-      <div >
-    <h1 class="text-center text-sm-start">
-      <strong>The creative crew</strong>
-    </h1>
-  </div>
-</div>
-  <div class="col-lg-4 text-left">
-    <h2>
-      WHO WE ARE
-    </h2>
-    <p class="mb-0">
-      We are team of creatively diverse, driven, innovative individuals working in various locations from the world.
-    </p>
-  </div>
+      <div>
+        <h1 class="text-center text-sm-start">
+          <strong>The creative crew</strong>
+        </h1>
+      </div>
+    </div>
+    <div class="col-lg-4 text-left">
+      <h2>
+        WHO WE ARE
+      </h2>
+      <p class="mb-0">
+        We are team of creatively diverse, driven, innovative individuals working in various locations from the world.
+      </p>
+    </div>
   </nav>
-  
+
   <main class="welcome">
 
     <div class="container">
       <div class="row row-cols-3">
         <div class="col-4 text-center">
-          <img src="./assets/photo1.png" alt="photo1" />
-          <p class="container__title">Product Owner</p>
-          <p class="container__p">Bill Mahoney</p>
+          <div>
+            <img src="./assets/photo1.png" alt="photo1" />
+            <p class="container__p">Bill Mahoney</p>
+            <p class="container__title">Product Owner</p>
+
+          </div>
         </div>
         <div class="col-4 text-center align-self-center">
-          <img src="./assets/photo2.png" alt="photo2" />
-          <p class="container__title">Art Director</p>
-          <p class="container__p">Saba Cabrera</p>
+          <div>
+            <img src="./assets/photo2.png" alt="photo2" />
+            <p class="container__p">Saba Cabrera</p>
+            <p class="container__title">Art Director</p>
+          </div>
         </div>
         <div class="col-4 text-center">
-          <img src="./assets/photo3.png" alt="photo3" />
-          <p class="container__title">Teach Lead</p>
-          <p class="container__p">Shae Lee</p>
+          <div>
+            <img src="./assets/photo3.png" alt="photo3" />
+
+            <p class="container__p">Shae Lee</p>
+            <p class="container__title">Teach Lead</p>
+          </div>
         </div>
         <div class="col-4 text-center">
-          <img src="./assets/photo4.png" alt="photo4" />
-          <p class="container__title">UX Designer</p>
-          <p class="container__p">Skylah Lu</p>
+          <div>
+            <img src="./assets/photo4.png" alt="photo4" />
+
+            <p class="container__p">Skylah Lu</p>
+            <p class="container__title">UX Designer</p>
+          </div>
         </div>
         <div class="col-4 text-center align-self-center">
-          <img src="./assets/photo5.png" alt="photo5" />
-          <p class="container__title">Developer</p>
-          <p class="container__p">Griff Richards</p>
+          <div>
+            <img src="./assets/photo5.png" alt="photo5" />
+
+            <p class="container__p">Griff Richards</p>
+            <p class="container__title">Developer</p>
+          </div>
         </div>
         <div class="col-4 text-center">
-          <img src="./assets/photo6.png" alt="photo6" />
-          <p class="container__title">Developer</p>
-          <p class="container__p">Stan John</p>
+          <div>
+            <img src="./assets/photo6.png" alt="photo6" />
+
+            <p class="container__p">Stan John</p>
+            <p class="container__title">Developer</p>
+          </div>
         </div>
       </div>
-    </div>   <footer class="footer">©2023 Created by <a href="https://github.com/Juana-89/my-team-page-master">Juana Llanje
+    </div>
+    <footer class="footer">©2023 Created by <a href="https://github.com/Juana-89/my-team-page-master">Juana Llanje
         Chávez</a>❤️</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
