--- a/src/index.html
+++ b/src/index.html
@@ -31,58 +31,47 @@
       </p>
     </div>
   </nav>
-  <main class="welcome">
+  <main class="grid">
     <div class="container">
       <div class="row row-cols-3">
         <div class="col-4 text-center">
-          <div>
             <img src="./assets/photo1.png" alt="photo1" />
-            <p class="container__p">Bill Mahoney</p>
             <p class="container__title">Product Owner</p>
-          </div>
+            <p class="container__p">Bill Mahoney</p>
         </div>
         <div class="col-4 text-center align-self-center">
-          <div>
             <img src="./assets/photo2.png" alt="photo2" />
-            <p class="container__p">Saba Cabrera</p>
             <p class="container__title">Art Director</p>
-          </div>
+            <p class="container__p bottom-card">Saba Cabrera</p>
         </div>
         <div class="col-4 text-center">
-          <div>
             <img src="./assets/photo3.png" alt="photo3" />
-            <p class="container__p">Shae Lee</p>
             <p class="container__title">Teach Lead</p>
-          </div>
+            <p class="container__p">Shae Lee</p>
         </div>
         <div class="col-4 text-center">
-          <div>
             <img src="./assets/photo4.png" alt="photo4" />
-            <p class="container__p">Skylah Lu</p>
             <p class="container__title">UX Designer</p>
-          </div>
+            <p class="container__p">Skylah Lu</p>
         </div>
         <div class="col-4 text-center align-self-center">
-          <div>
             <img src="./assets/photo5.png" alt="photo5" />
-            <p class="container__p">Griff Richards</p>
             <p class="container__title">Developer</p>
-          </div>
+            <p class="container__p bottom-card">Griff Richards</p>
         </div>
         <div class="col-4 text-center">
-          <div>
             <img src="./assets/photo6.png" alt="photo6" />
-            <p class="container__p">Stan John</p>
             <p class="container__title">Developer</p>
-          </div>
+            <p class="container__p">Stan John</p>
         </div>
       </div>
     </div>
+  </main>
     <footer class="footer">©2023 Created by <a href="https://github.com/Juana-89/my-team-page-master">Juana Llanje
         Chávez</a>❤️</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"></script>
-</body>
+    </body>
 
 </html>
