--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
   </nav>
   <main class="grid">
     <div class="container">
-      <div class="row row-cols-3 row-cols-sm-2">
+      <div class="row row-cols-sm-2 row-cols-md-3">
         <div class="col-4 text-center">
             <img class="img-thumbnail" src="./assets/photo1.png" alt="photo1" />
             <p class="container__title">Product Owner</p>
@@ -47,12 +47,12 @@
         <div class="col-4 text-center">
             <img class="img-thumbnail" src="./assets/photo3.png" alt="photo3" />
             <p class="container__title">Teach Lead</p>
-            <p class="container__p">Shae Lee</p>
+            <p class="container__p pc">Shae Lee</p>
         </div>
         <div class="col-4 text-center">
             <img class="img-thumbnail" src="./assets/photo4.png" alt="photo4" />
             <p class="container__title">UX Designer</p>
-            <p class="container__p">Skylah Lu</p>
+            <p class="container__p pc">Skylah Lu</p>
         </div>
         <div class="col-4 text-center align-self-center">
             <img class="img-thumbnail" src="./assets/photo5.png" alt="photo5" />
